Fixed day_list overflowing and overlapping version number on small screens.

--- a/default.css
+++ b/default.css
@@ -202,7 +202,6 @@ body
 	display: none;
 	flex-wrap: wrap;
 	width: 100%;
-	height: 20px;
 	border: 2px solid #ddd;
 	border-bottom: 0px;
 }
